@@ -2,7 +2,7 @@ name = Menu position
 description = Customize menu position of nodes depending on their content type, associated terms and others conditions.
 
 core = 7.x
-dependencies[] = menu (>7.8)
+dependencies[] = menu (>7.11)
 
 files[] = menu_position.module
 files[] = menu_position.admin.inc
@@ -11,9 +11,9 @@ files[] = menu_position.node_type.inc
 
 configure = admin/structure/menu-position
 
-; Information added by drupal.org packaging script on 2011-11-01
-version = "7.x-1.0"
+; Information added by drupal.org packaging script on 2012-02-22
+version = "7.x-1.1"
 core = "7.x"
 project = "menu_position"
-datestamp = "1320141035"
+datestamp = "1329911144"
 
